[FLINK-33361][connectors/kafka] Add Java 17 compatibility to Flink Kafka connector